# openapi.yaml
@@ -4,10 +4,8 @@ info:
   description: Simple API for keeping track of orders in a restaurant.
   version: 0.1.9
 tags:
-  - name: orders
-    description: Information for singular orders
   - name: tables
-    description: Orders in the context of the tables they are assigned to
+    description: Information for orders of tables
   - name: menu-items
     description: All possible items which can be ordered
 paths:
@@ -15,7 +13,7 @@ paths:
     get:
       tags:
         - tables
-      summary: Get all remaining orders for a table
+      summary: Get all remaining orders for a table. If a table does not exist then the menu_items in the response will be empty.
       parameters:
         - name: table-number
           in: path
@@ -35,6 +33,16 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Order'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Server error. Failed to get data.
     post:
       tags:
         - tables
@@ -84,8 +92,8 @@ paths:
                   error:
                     type: string
                     example: "Format of data in body is incorrect"
-        '404':
-          description: Table does not exist
+        '409':
+          description: Idempotency key conflict
           content:
             application/json:
               schema:
@@ -93,7 +101,7 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Table with id 1 does not exist"
+                    example: "This order has already been added"
         '422':
           description: Invalid item-id or duplicate item-id
           content:
@@ -104,15 +112,31 @@ paths:
                   error:
                     type: string
                     example: "Menu item with id 1 does not exist"
-  /orders/{order-id}:
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Server error. Failed to add order.
+  /tables/{table-number}/orders/{order-id}:
     get:
       tags:
-        - orders
+        - tables
       summary: Get information for a specific order of a specific table
       parameters:
         - name: order-id
           in: path
           description: The Order ID
+          required: true
+          schema:
+            type: number
+        - name: table-number
+          in: path
+          description: The table which the order belongs to
           required: true
           schema:
             type: number
@@ -133,9 +157,18 @@ paths:
                   error:
                     type: string
                     example: "Table with id 1 does not exist"
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
     delete:
       tags:
-        - orders
+        - tables
       summary: Delete a given order from a table
       parameters:
         - name: order-id
@@ -144,6 +177,12 @@ paths:
           required: true
           schema:
             type: string
+        - name: table-number
+          in: path
+          description: The table which the order belongs to
+          required: true
+          schema:
+            type: number
       responses:
         '200':
           description: Success
@@ -157,6 +196,15 @@ paths:
                   error:
                     type: string
                     example: "Table with id 1 does not exist"
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
   /menu-items:
     get:
       tags:
@@ -179,6 +227,15 @@ paths:
                           type: string
                         name:
                           type: string
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
 components:
   schemas:
     Order:
