# server/src/server_functions.rs
@@ -1,33 +1,34 @@
-use rusqlite::{ params_from_iter, Connection, Result };
-use rocket::serde::{ Serialize, Deserialize };
+use rocket::http::hyper::server::Server;
+use rusqlite::{ params_from_iter, Error, ErrorCode, Result };
 use rand::Rng;
 use std::fmt::Display;
 
+use crate::server_errors::ServerError;
 use crate::database_connection::DatabaseConnector;
 use server::{ rest_responses, rest_bodies };
 
-pub fn setup_database(connector: &impl DatabaseConnector) -> Result<(), rusqlite::Error> {
-    let connection = connector.open()?;
+pub fn setup_database(connector: &impl DatabaseConnector) -> Result<(), ServerError> {
+    let connection = connector.open().str_err()?;
     
     let menu_items_exists_query = "SELECT 1 FROM sqlite_master WHERE type='table' AND name='menu_items';";
-    let mut stmt = connection.prepare(menu_items_exists_query)?;
-    let menu_items_table_exists = stmt.exists([])?;
+    let mut stmt = connection.prepare(menu_items_exists_query).str_err()?;
+    let menu_items_table_exists = stmt.exists([]).str_err()?;
 
     if !menu_items_table_exists {
         connection.execute("
             CREATE TABLE menu_items (
                 id INTEGER PRIMARY KEY,
-                name TEXT);", ())?;
-            connection.execute("INSERT INTO menu_items (name) VALUES ('Hamburger')", ())?;
-            connection.execute("INSERT INTO menu_items (name) VALUES ('Salad')", ())?;
-            connection.execute("INSERT INTO menu_items (name) VALUES ('Sushi')", ())?;
-            connection.execute("INSERT INTO menu_items (name) VALUES ('Ice Cream')", ())?;
-            connection.execute("INSERT INTO menu_items (name) VALUES ('Soda');", ())?;
+                name TEXT);", ()).str_err()?;
+            connection.execute("INSERT INTO menu_items (name) VALUES ('Hamburger')", ()).str_err()?;
+            connection.execute("INSERT INTO menu_items (name) VALUES ('Salad')", ()).str_err()?;
+            connection.execute("INSERT INTO menu_items (name) VALUES ('Sushi')", ()).str_err()?;
+            connection.execute("INSERT INTO menu_items (name) VALUES ('Ice Cream')", ()).str_err()?;
+            connection.execute("INSERT INTO menu_items (name) VALUES ('Soda');", ()).str_err()?;
     }
 
     let orders_exists_query = "SELECT 1 FROM sqlite_master WHERE type='table' AND name='orders';";
-    let mut stmt = connection.prepare(orders_exists_query)?;
-    let orders_table_exists = stmt.exists([])?;
+    let mut stmt = connection.prepare(orders_exists_query).str_err()?;
+    let orders_table_exists = stmt.exists([]).str_err()?;
 
     if !orders_table_exists {
         connection.execute("
@@ -37,25 +38,25 @@ pub fn setup_database(connector: &impl DatabaseConnector) -> Result<(), rusqlite
                 menu_item_id INTEGER,
                 table_number INTEGER,
                 minutes_to_cook INTEGER,
-                FOREIGN KEY(menu_item_id) REFERENCES menu_items(id));", ())?;
+                FOREIGN KEY(menu_item_id) REFERENCES menu_items(id));", ()).str_err()?;
     }
     Result::Ok(())
 }
 
-pub fn get_menu_items(connector: &impl DatabaseConnector) -> Result<rest_responses::MenuItems, rusqlite::Error> {
-    let connection = connector.open()?;
+pub fn get_menu_items(connector: &impl DatabaseConnector) -> Result<rest_responses::MenuItems, ServerError> {
+    let connection = connector.open().str_err()?;
     let query = "SELECT id, name FROM menu_items";
-    let mut stmt = connection.prepare(query)?;
+    let mut stmt = connection.prepare(query).str_err()?;
     let query_result = stmt.query_map(
         [],
         |row| Result::Ok(rest_responses::MenuItem {
             id: row.get(0)?,
             name: row.get(1)?
-        }))?;
+        })).str_err()?;
 
     let mut items = Vec::new();
     for item in query_result {
-        items.push(item?);
+        items.push(item.str_err()?);
     }
 
     Result::Ok(
@@ -65,7 +66,7 @@ pub fn get_menu_items(connector: &impl DatabaseConnector) -> Result<rest_respons
     )
 }
 
-pub fn add_orders(connector: &impl DatabaseConnector, table_number: u32, orders: rest_bodies::Orders) -> Result<rest_responses::Orders, String> {
+pub fn add_orders(connector: &impl DatabaseConnector, table_number: u32, orders: rest_bodies::Orders) -> Result<rest_responses::Orders, ServerError> {
     let mut connection = connector.open().str_err()?;
     let transaction = connection.transaction().str_err()?;
 
@@ -84,9 +85,15 @@ pub fn add_orders(connector: &impl DatabaseConnector, table_number: u32, orders:
                 (":table_number", &table_number.to_string()),
                 (":cook_time", &cook_time.to_string()),
                 (":menu_item_id", &order.menu_item_id.to_string())])
-            .str_err()?;
+            .map_err(|e| match e {
+                Error::SqliteFailure(err, Some(msg)) => match err.code {
+                    ErrorCode::ConstraintViolation => ServerError::Idempotency(),
+                    _ => ServerError::StringError(msg.to_string())
+                },
+                x => ServerError::StringError(x.to_string())
+            })?;
         if rows == 0 {
-            return Err("No rows added; menu item likely does not exist".to_string());
+            return Err(ServerError::DataNotFound());
         }
     };
 
@@ -121,13 +128,13 @@ pub fn add_orders(connector: &impl DatabaseConnector, table_number: u32, orders:
     )
 }
 
-pub fn get_orders(connector: &impl DatabaseConnector, table_number: u32) -> Result<rest_responses::Orders, rusqlite::Error> {
-    let connection = connector.open()?;
+pub fn get_orders(connector: &impl DatabaseConnector, table_number: u32) -> Result<rest_responses::Orders, ServerError> {
+    let connection = connector.open().str_err()?;
     let mut stmt = connection.prepare(
         "SELECT o.id, o.minutes_to_cook, m.id, m.name
         FROM orders AS o
         INNER JOIN menu_items AS m ON m.id = o.menu_item_id
-        WHERE o.table_number = :table_number")?;
+        WHERE o.table_number = :table_number").str_err()?;
     let query_result = stmt.query_map(
         &[(":table_number", &table_number.to_string())],
         |row| Result::Ok(rest_responses::Order {
@@ -135,11 +142,11 @@ pub fn get_orders(connector: &impl DatabaseConnector, table_number: u32) -> Resu
             minutes_to_cook: row.get(1)?,
             menu_item_id: row.get(2)?,
             menu_item_name: row.get(3)?
-        }))?;
+        })).str_err()?;
 
     let mut items = Vec::new();
     for item in query_result {
-        items.push(item?);
+        items.push(item.str_err()?);
     }
 
     Result::Ok(
@@ -149,14 +156,14 @@ pub fn get_orders(connector: &impl DatabaseConnector, table_number: u32) -> Resu
     )
 }
 
-pub fn get_order(connector: &impl DatabaseConnector, table_number: u32, order_id: u32) -> Result<rest_responses::Order, rusqlite::Error> {
-    let connection = connector.open()?;
+pub fn get_order(connector: &impl DatabaseConnector, table_number: u32, order_id: u32) -> Result<rest_responses::Order, ServerError> {
+    let connection = connector.open().str_err()?;
     let mut stmt = connection.prepare(
         "SELECT o.id, o.minutes_to_cook, m.id, m.name
         FROM orders AS o
         INNER JOIN menu_items AS m ON m.id = o.menu_item_id
         WHERE o.id = :order_id
-        AND o.table_number = :table_number")?;
+        AND o.table_number = :table_number").str_err()?;
     let query_result = stmt.query_row(
         &[
             (":order_id", &order_id.to_string()),
@@ -166,33 +173,36 @@ pub fn get_order(connector: &impl DatabaseConnector, table_number: u32, order_id
             minutes_to_cook: row.get(1)?,
             menu_item_id: row.get(2)?,
             menu_item_name: row.get(3)?
-        }))?;
+        }))
+        .map_err(|e| match e {
+            Error::QueryReturnedNoRows => ServerError::DataNotFound(),
+            x => ServerError::StringError(x.to_string())
+        })?;
 
     Result::Ok(query_result)
 }
 
-pub fn delete_order(connector: &impl DatabaseConnector, table_number: u32, order_id: u32) -> Result<(), rusqlite::Error> {
-    let connection = connector.open()?;
+pub fn delete_order(connector: &impl DatabaseConnector, table_number: u32, order_id: u32) -> Result<(), ServerError> {
+    let connection = connector.open().str_err()?;
     connection.execute(
         "DELETE FROM orders
             WHERE id = :order_id
             AND table_number = :table_number",
         &[
             (":order_id", &order_id.to_string()),
-            (":table_number", &table_number.to_string())])?;
+            (":table_number", &table_number.to_string())]).str_err()?;
     Result::Ok(())
 }
 
-pub trait ResultExtensionMethods<T, E> {
-    fn str_err(self) -> Result<T, String>;
+pub trait DisplayResultMethods<T, E> {
+    fn str_err(self) -> Result<T, ServerError>;
 }
 
-impl<T, E> ResultExtensionMethods<T, E> for Result<T, E>
-where
-    E: Display,
+impl<T, E> DisplayResultMethods<T, E> for Result<T, E>
+where E: Display,
 {
-    fn str_err(self) -> Result<T, String>
+    fn str_err(self) -> Result<T, ServerError>
     {
-        self.map_err(|e| e.to_string())
+        self.map_err(|e| ServerError::StringError(e.to_string()))
     }
 }
